--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -380,7 +380,7 @@
   box-shadow: $box-shadow;
 
   .nav__title {
-    color: #fff;
+    color: #0A4183;
     font-size: $type-size-6;
     background: $primary-color;
     border-top-left-radius: $border-radius;
