--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #ECF5FE;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$border-color               : #171516;
 
 $primary-color              : #fff;
 $success-color              : #62c462;
