--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,7 +57,7 @@ $body-color                 : #fff;
 $background-color           : #F0F8FF;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #000000;
 $border-color               : $lighter-gray;
 
 $primary-color              : #fff;
