--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -181,7 +181,7 @@
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: #0A4183;
     text-decoration: none;
 
     &:hover {
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $primary-color;
+    background-color: #0A4183;
     color: #fff;
     cursor: pointer;
   }
