--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -181,7 +181,7 @@
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: #0A4183;
+    color: $masthead-link-color;
     text-decoration: none;
 
     &:hover {
