--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,14 +53,14 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #000000;
+$body-color                 : #fff;
 $background-color           : #F0F8FF;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : #000000;
 $border-color               : $lighter-gray;
 
-$primary-color              : #fff;
+$primary-color              : #000000;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
