--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -131,8 +131,8 @@
     font-weight: bold;
     text-align: center;
     text-decoration: none;
-    color: mix(#fff, $gray, 50%);
-    border: 1px solid $light-gray;
+    color: #0A4183;
+    border: 1px solid #0A4183;
     border-radius: $border-radius;
 
     &:hover {
