--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -132,7 +132,7 @@
     text-align: center;
     text-decoration: none;
     color: #0A4183;
-    border: 1px solid #0A4183;
+    border: 1px solid #537aa8;
     border-radius: $border-radius;
 
     &:hover {
@@ -151,7 +151,7 @@
     }
 
     &.disabled {
-      color: mix(#fff, $gray, 75%);
+      color: #537AA8;
       pointer-events: none;
       cursor: not-allowed;
     }
