--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -17,7 +17,7 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  background-color: #0A4183;
+  background-color: #fff;
   border: 0 !important;
   border-radius: $border-radius;
   cursor: pointer;
