--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -267,7 +267,7 @@
 
       &:hover {
         color: $masthead-link-color-hover;
-        background: #0A4183;
+        background: mix(#fff, $primary-color, 75%);
       }
     }
 
