--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -50,7 +50,7 @@
   &--inverse {
     color: $gray !important;
     border: 1px solid $light-gray !important; /* override*/
-    background-color: #fff;
+    background-color: #0A4183;
 
     &:hover {
       color: #fff !important;
